--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="description" content="Página simple para Congreso Dental Chihuahuense (CODEC)">
     <title>Congreso Dental Chihuahuense (CODEC)</title>
-    <script>
+    <!-- <script>
         if (window.location.protocol !== "https:" || window.location.hostname !== "www.codecuu.com") {
             window.location.href = "https://www.codecuu.com" + window.location.pathname + window.location.search;
         }
-    </script>
+    </script> -->
     <script>
         !function(f,b,e,v,n,t,s)
         {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -210,9 +210,9 @@
                                 <a href="#faq" class="navbar-link w-nav-link nav-item nav-link fs-5">FAQs</a>
                               </nav>
                         </div>
-                        <div class="ml-5 registro botonHeader d-flex justify-content-center align-items-center ms-auto">
+                        <!-- <div class="ml-5 registro botonHeader d-flex justify-content-center align-items-center ms-auto">
                             <a href="#" class="button w-button btn-abrir-popup">Comprar Entrada</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <script>
@@ -247,7 +247,7 @@
             </div>
 
 
-            <div class="pagos">
+            <!-- <div class="pagos">
                 <button class="close-button">&times;</button>
                 <section id="registro-section" class="section">
                     <h3>Registro de Usuario</h3>
@@ -346,7 +346,7 @@
                                     </label>
                                 </div>
                                 <!-- Opción de participación en evento de cartes -->
-                                <div id="cartes-event" style="display: none;">
+                                <!-- <div id="cartes-event" style="display: none;">
                                     <p class="form-label fs-6 mt-2 text-align-start">¿Confirma su participación en el
                                         evento de carteless?
                                     </p>
@@ -401,7 +401,7 @@
                     .modal-content {
                         border: none;
                     }
-                </style>
+                </style> -->
                 <section id="pago-section" class="section hidden">
                     <div class="modal-content" style="min-width: fit-content;">
                         <div class="modal-header">
@@ -481,7 +481,7 @@
                         });
                     });
                 </script>
-            </div>
+            </div> -->
 
             <!-- codigo para bajar el contenido cuando se despliega el menu hamburguesa -->
             <!--         <script>
@@ -618,7 +618,7 @@
 
                                             </div>
                                             <!-- cuenta regresiva INICIO -->
-                                            <div>
+                                            <!-- <div>
                                                 <h4 class="mt-5 fs-5">Días hasta el evento:</h4>
                                             </div>
                                             <div class="countdown-container mt-2 pt-2">
@@ -646,7 +646,7 @@
                                                         <div class="label">Seg</div>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                             <!-- cuenta regresiva FIN -->
                                         </div>
                                     </div>
@@ -2046,8 +2046,8 @@
                         </div>
                         <div class="popop-footer">
                             <!-- Botones u otras acciones del footer -->
-                            <a href="#" id="comprarEntrada" class="button w-button btn-abrir-popup">Comprar Entrada</a>
-                        </div>
+                            <a id="comprarEntrada" class="button w-button btn-abrir-popup"></a>
+                        </div> 
                     </div>
                 </div>
 
@@ -2367,18 +2367,12 @@
                     <div class="cta-container">
                         <div class="boletos-grid">
                             <div>
-                                <h1>Compra tus Boletos</h1>
-                                <p>No te pierdas ser parte de esta experiencia de la cual te llevaras gran
-                                    conocimiento de
-                                    expertos en la industria dental.</p>
+                                <h1>¡Gracias por acompañarnos!</h1>
+                                
                             </div>
 
 
-                            <div class="flecha d-flex">
-
-                                <div class="flechita d-flex w-100">
-                                    <a href="#" class="arrow">&rarr;</a>
-                                </div>
+            
 
                             </div>
                         </div>
