--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="description" content="Página simple para Congreso Dental Chihuahuense (CODEC)">
     <title>Congreso Dental Chihuahuense (CODEC)</title>
-    <!-- <script>
+    <script>
         if (window.location.protocol !== "https:" || window.location.hostname !== "www.codecuu.com") {
             window.location.href = "https://www.codecuu.com" + window.location.pathname + window.location.search;
         }
-    </script> -->
+    </script>
     <script>
         !function(f,b,e,v,n,t,s)
         {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
     <link rel="preload" href="styles/index.css" as="style">
     <link rel="stylesheet" href="styles/index.css">
-    <link rel="stylesheet" href="styles/fix.css">
+    <link rel="stylesheet" href="styles/fixs.css">
     <!-- <link rel="stylesheet" href="styles/video.css"> -->
     <style>
         @media (min-width: 992px) {
