--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="description" content="Página simple para Congreso Dental Chihuahuense (CODEC)">
     <title>Congreso Dental Chihuahuense (CODEC)</title>
-    <script>
+    <!-- <script>
         if (window.location.protocol !== "https:" || window.location.hostname !== "www.codecuu.com") {
             window.location.href = "https://www.codecuu.com" + window.location.pathname + window.location.search;
         }
-    </script>
+    </script> -->
     <script>
         !function(f,b,e,v,n,t,s)
         {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -345,7 +345,7 @@
                                         </div>
                                     </label>
                                 </div>
-                                <!-- Opción de participación en evento de cartes -->
+                                <-- Opción de participación en evento de cartes -->
                                 <!-- <div id="cartes-event" style="display: none;">
                                     <p class="form-label fs-6 mt-2 text-align-start">¿Confirma su participación en el
                                         evento de carteless?
@@ -392,8 +392,8 @@
 
                 </section>
 
-                <!-- Sección de Pago -->
-                <style>
+                <-- Sección de Pago -->
+                <!-- <style>
                     button {
                         box-shadow: none;
                     }
@@ -426,9 +426,9 @@
                             </form>
                         </div>
                     </div>
-                </section>
+                </section> -->
 
-                <script>
+                <!-- <script>
                     // Cuando el formulario de registro se envía, muestra la sección de pago
                     document.getElementById('registroForm').addEventListener('submit', function (event) {
                         event.preventDefault(); // Evita el envío automático del formulario
@@ -476,12 +476,12 @@
                                 pagosDiv.classList.remove('active', 'closing');
                                 pagosDiv.style.visibility = 'hidden'; // Ocultar después de quitar las clases
                                 pagosDiv.style.opacity = '0'; // Transparente después de quitar las clases
-                                document.body.style.overflow = ''; // Habilitar scroll
-                            }, 1000); // Tiempo de la transición (0.5s)
+                                document.body.style.overflow = ''; // Habilitar scrollz
+                            }, 1000); 
                         });
                     });
                 </script>
-            </div> -->
+            </div>  -->
 
             <!-- codigo para bajar el contenido cuando se despliega el menu hamburguesa -->
             <!--         <script>
@@ -2046,7 +2046,7 @@
                         </div>
                         <div class="popop-footer">
                             <!-- Botones u otras acciones del footer -->
-                            <a id="comprarEntrada" class="button w-button btn-abrir-popup"></a>
+                            <!-- <a id="comprarEntrada" class="button w-button btn-abrir-popup"></a> -->
                         </div> 
                     </div>
                 </div>
@@ -2380,7 +2380,7 @@
 
 
                     </div>
-                    <script>
+                    <!-- <script>
                         document.addEventListener('DOMContentLoaded', function () {
                             const btnAbrirPopup = document.querySelector('.arrow');
                             const pagosDiv = document.querySelector('.pagos');
@@ -2406,7 +2406,7 @@
                                 }, 1000);
                             });
                         });
-                    </script>
+                    </script> -->
                 </div>
 
 
@@ -2509,15 +2509,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js"></script>
-    <script src="scripts/simplyCountdown.js"></script>
+    <!-- <script src="scripts/simplyCountdown.js"></script> -->
     <script src="scripts/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="./scripts/pagoss.js"></script>
-    <script src="./scripts/boletos.js"></script>
+    <!-- <script src="./scripts/pagoss.js"></script> -->
+    <!-- <script src="./scripts/boletos.js"></script> -->
 </body>
 
 </html>
