--- a/index.html
+++ b/index.html
@@ -2052,7 +2052,7 @@
                 </div>
 
 
-                <script src="./scripts/popup.js"></script>
+                <script src="./scripts/popups.js"></script>
 
 
                 <!-- organizadores -->
@@ -2465,7 +2465,6 @@
                                 <a href="#section-home-partner"
                                     class="navbar-link w-nav-link links-footer">Organizadores</a>
                                 <a href="#faq" class="navbar-link w-nav-link links-footer">FAQs</a>
-                                <a href="#" id="informative-video-link" class="navbar-link w-nav-link nav-item nav-link fs-5 links-footer">Video Informativo</a>
 
                             </nav>
                             <!-- </div>
