cambio logo vexa

--- a/index.html
+++ b/index.html
@@ -2487,7 +2487,7 @@
                         <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca2-547d8c7d" class="footer-credit">Todos
                             los derechos reservados</div>
                         <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca4-547d8c7d" class="text-size-small">
-                            Diseñado por: <a href=""><img loading="lazy" src="./assets/Transparent Logo.webp"
+                            Diseñado por: <a href=""><img loading="lazy" src="./assets/vexa-white-logo.png"
                                     alt="Logo Vexa" class="vexa-logo"></a>
                         </div>
                     </div>
