--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
     <link rel="preload" href="styles/page.css" as="style">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/page.css">
     <link rel="stylesheet" href="styles/fixs.css">
     <!-- <link rel="stylesheet" href="styles/video.css"> -->
     <style>
